--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,6 +32,25 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.embla {
+  overflow: hidden;
+  margin-inline: auto;
+  width: fit-content;
+}
+.embla__container {
+  display: flex;
+}
+.embla__slide {
+  flex: 0 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: fit-content;
+  min-width: 0;
+  max-width: 100%;
+  margin: 0;
+}
+
 .animated-slide {
   transform: translateX(-250%);
   animation: slide-in 0.75s ease-in 1 forwards;
